--- a/css/request.css
+++ b/css/request.css
@@ -37,29 +37,11 @@ header {
 .po{
     cursor: pointer;
 }
-/*********************************Î°úÍ∑∏Ïù∏*********************************/
-#loginFormBox{
-    width: 100%;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    position: absolute;
+.disabled{
+    pointer-events: none;
+    cursor: default;
 }
-#loginFormBox #loginForm{
-    width: 100%;
-    height: 20px;
-    position: fixed;
-    z-index: 9999;
-    display: flex;
-    justify-content: right;
-    background-color: white;
-}
-#loginFormBox #loginForm span{
-    margin-right: 30px;
-    cursor: pointer;
-    font-size: 14px;
-}
-/**********************ÏÉÅÎã® ÎÑ§ÎπÑ**********************/
+/**********************nav**********************/
 #topGnb {
     width: 100%;
     height: 100px;
@@ -72,7 +54,7 @@ header {
     position: fixed;
 }
 #topGnb #nav_list{
-    width: 50%;
+    width: 70%;
 }
 #topGnb #language,
 #topGnb #hamburger {
@@ -107,7 +89,7 @@ header {
     margin: 0 auto;
 }
 #topGnb #topGnbMenu li:hover a::after {
-    width: 80%;
+    width: 70%;
     background-color: purple;
 }
 #topGnb #topGnbMenu li:hover a {
@@ -131,7 +113,7 @@ header {
     margin-top: 40px;
     cursor: pointer;
 }
-/**********************ÏÉÅÎã® ÎÑ§ÎπÑ ÏÑúÎ∏åÎ©îÎâ¥**********************/
+/**********************ªÛ¥‹ ≥◊∫Ò º≠∫Í∏ﬁ¥∫**********************/
 #subMenu {
     width: 100%;
     height: 110px;
@@ -248,7 +230,7 @@ header {
 #subMenu2 ul li a:nth-of-type(1){
     margin-right: 10px;
 }
-/**********************Î™®Î∞îÏùº ÎÑ§ÎπÑ**********************/
+/**********************∏πŸ¿œ ≥◊∫Ò**********************/
 .mobileGnb{
     width: 100%;
     height: 100%;
@@ -301,9 +283,9 @@ header {
     display: flex;
     position: absolute;
     left:88%;
-    margin-top: -30px;
     cursor: pointer;
     z-index: 9;
+    margin-top: -30px;
 }
 .mobileGnb .mobileMenu #subM1{
     width: 100%;
@@ -376,10 +358,10 @@ header {
 #section1 #section1_AllBox #section1_txtBox h4{
     font-size: 28px;
     font-weight: 100;
-    margin-left: 45px;
+    margin-left: 25px;
 }
 #section1 #section1_AllBox #section1_txtBox h4:nth-of-type(1){
-    margin: 100px 0 0 45px;
+    margin: 100px 0 0 25px;
 }
 #section1 #section1_AllBox #section1_BtnBox{
     width: 250px;
@@ -402,7 +384,7 @@ header {
     color: white;
     margin-top: 15px;
     font-size: 14px;
-    width: 138px;
+    width: 150px;
     display: inline-block;
     border-bottom: white;
 }
@@ -739,7 +721,7 @@ header {
 }
 /**********************section3**********************/
 #section3{
-    width: 100%;
+    width: 85%;
     height: 400px;
     margin: 70px auto;
     position: relative;
@@ -757,15 +739,17 @@ header {
     display: flex;
     flex-direction: column;
     color: #888888;
-    overflow-y: scroll;
+    overflow-x: hidden;
 }
 #section3 #section3_allBox #section3_txtBox p{
     font-size: 14px;
+    margin: 10px 0 0 10px;
 }
 #section3 #section3_allBox #section3_txtBox div{
-    margin: 25px 0 0 30px;
     position: relative;
-    width: 100%;
+    top:25px;
+    left: 30px;
+    width: 90%;
     height: auto;
 }
 #section3 #section3_allBox #section3_labelBox{
@@ -826,7 +810,6 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
 }
 #footer div{
     position: relative;
@@ -835,9 +818,9 @@ header {
     margin-bottom: 30px;
 }
 /***************************************************************************/
-/*********************************ÎØ∏ÎîîÏñ¥ ÏøºÎ¶¨*********************************/
+/*********************************πÃµæÓ ƒı∏Æ*********************************/
 /***************************************************************************/
-/***************Î™®ÎãàÌÑ∞ ÌÅ¨Í∏∞***************/
+/***************∏¥œ≈Õ ≈©±‚***************/
 @media screen and (min-width: 1200px){
     #menu,
     .close,
@@ -854,7 +837,7 @@ header {
         display: none;
     }
 }
-/**************ÌÉÄÎ∏îÎ†õ ÏÇ¨Ïù¥Ï¶à***************/
+/**************≈∏∫Ì∑ø ªÁ¿Ã¡Ó***************/
 @media screen and (min-width: 841px) and (max-width: 1199px){
     #topGnb ul li,
     #title,
@@ -890,7 +873,7 @@ header {
         height: 1150px;
     }
 }
-/**************Î™®Î∞îÏùº ÏÇ¨Ïù¥Ï¶à***************/
+/**************∏πŸ¿œ ªÁ¿Ã¡Ó***************/
 @media screen and (max-width: 840px) {
     #topGnb ul li,
     #title,
@@ -980,7 +963,8 @@ header {
         margin: 0 auto;
     }
     #section3 #section3_allBox #section3_txtBox div{
+        top: 15px;
+        left: 15px;
         width: 95%;
-        margin: 10px 0 0 10px;
     }
 }
